[skip-ci] update readme